# quad_mpc_demo

./: README.md
examples_mpc/: CMakeLists.txt  package.xml
examples_mpc/src/: example_gazebo.cpp  example_joint.cpp  example_joint_test.py  example_keyboard.cpp  example_real.cpp  example_set_entity.cpp  example_set_entity_test.py
robot_description/: CMakeLists.txt  README.md  package.xml
robot_description/README/: transmission.md
robot_description/config/controller/: controller_gazebo.yaml  controller_real.yaml  ros2_control.xacro
robot_description/config/rviz/: robot.rviz
robot_description/config/urdf/: robot.urdf
robot_description/config/worlds/: earth.world  empty.world  plum_piles.world  slope.world  space.world  stairs.world
robot_description/config/worlds/building_editor_models/slope15/: model.sdf
robot_description/config/worlds/building_editor_models/slope15/meshes/: slope15.dae
robot_description/config/worlds/building_editor_models/slope_stairs/: model.sdf
robot_description/config/worlds/building_editor_models/slope_stairs/meshes/: slope.dae
robot_description/config/xacro/: const.xacro  gazebo.xacro  leg.xacro  materials.xacro  robot.xacro  stairs.xacro  transmission.xacro
robot_description/launch/: gazebo.launch.py  motor.launch.py  rviz.launch.py
robot_description/plugin/: draw_force_plugin.cpp  draw_lines_plugin.cpp  foot_contact_plugin.cpp
