<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description</name>
  <version>0.1.0</version>
  <description>robot description package</description>
  <maintainer email="postrantor@gmail.com">rkreinin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>robot_state_publisher</depend>

  <depend>unitree_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>controller_manager_msgs</depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>gazebo_plugins</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
